Adicionando imagens e texto ao website.

--- a/bubatag.html
+++ b/bubatag.html
@@ -19,7 +19,7 @@
             <div>
                 <nav class="menu">
                     <ul>
-                        <li><img src="imgs/logo-krono.png" width="45px"></li>
+                        <li><a href="index.html"><img src="imgs/logo-krono.png" width="45px"></a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#problematica">Problemática</a></li>
                         <li><a href="#solucao">Solução</a></li>
@@ -41,10 +41,10 @@
             <div class="position-sobre">
                 <div class="sobre-texto">
                     <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto;">Sobre</h1>
-                    <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
+                    <p style="color: white; font-size: 16px;"><b>Somos um grupo de desenvolvedores e estamos desenvolvendo um aplicativo mobile para otimizar a criação e manejo de búfalos. O app permite monitorar a localização dos animais, enviando alertas caso algum fuja do cercado. Além disso, utiliza um chip na tag de orelha do búfalo que além de rastrear o animal, é usado para medir seus batimentos cardíacos e monitorar o nível de estresse, alertando o criador caso o animal esteja desconfortável. A ferramenta oferece maior controle sobre a saúde e segurança dos animais, trazendo mais eficiência e bem-estar para os rebanhos.</b></p>
                 </div>
                 <div class="imagem-sobre1">
-                    <img src="imgs/croqui.png" width="300px" height="300px" alt="">
+                    <img src="imgs/sobre.jpg" width="300px" height="300px" alt="">
                 </div>
             </div>
         </section>
@@ -53,10 +53,10 @@
             <div class="position-sobre">
                 <div class="sobre-texto-problematica">
                     <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto; margin-left: 200px;">Problemática</h1>
-                    <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
+                    <p style="color: white; font-size: 16px;"><b>A criação de búfalos no Brasil enfrenta desafios específicos, principalmente devido ao comportamento mais agressivo desses animais. Os búfalos são conhecidos por sua força e instintos, o que pode levar a fugas frequentes de seus cercados.  Esse tipo de comportamento não só causa prejuízos materiais (com o dano às cercas), mas também pode resultar em problemas maiores, como danos a propriedades vizinhas ou até acidentes, caso o animal invada outras áreas. Além disso, manter os búfalos estressados tem um impacto direto na qualidade de sua carne e derivados.</b></p>
                 </div>
                 <div class="imagem-problematica">
-                    <img src="imgs/croqui.png" width="300px" height="300px" alt="">
+                    <img src="imgs/problematica.jpg" width="300px" height="300px" alt="">
                 </div>
             </div>
         </section>
@@ -65,58 +65,45 @@
             <div class="position-sobre">
                 <div class="sobre-texto">
                     <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto;">Solução</h1>
-                    <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
+                    <p style="color: white; font-size: 16px;"><b>Nosso aplicativo mobile foi desenvolvido justamente para resolver esse problema. Com ele, o criador pode monitorar em tempo real a localização dos búfalos, e, caso algum animal fuja, o sistema envia um alerta imediato informando por onde o búfalo escapou. Isso permite que o criador reencaminhe rapidamente o animal de volta ao cercado, diminuindo significativamente os prejuízos materiais e o tempo gasto para resolver o problema.
+                        Com essa solução, conseguimos otimizar o processo de manejo e aumentar a segurança tanto dos animais quanto das propriedades envolvidas, tornando a gestão do rebanho mais eficiente e com menos perdas financeiras.</b></p>
                 </div>
                 <div class="imagem-sobre1">
-                    <img src="imgs/croqui.png" width="300px" height="300px" alt="">
+                    <img src="imgs/solucao.jpg" width="300px" height="300px" alt="">
+                </div>
+            </div>
+        </section>
+        
+        <section class="home5-bubatag" id="mercado">
+            <div class="position-sobre">
+                <div class="sobre-texto-problematica">
+                    <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto; margin-left: 200px;">Mercado</h1>
+                    <p style="color: white; font-size: 16px;"><b>O mercado de bubalinos no Brasil tem crescido, especialmente na produção de leite e carne, com destaque na região do Vale do Ribeira. Embora os búfalos ofereçam vantagens, como resistência e alta produtividade, sua agressividade e tendência a fugir geram prejuízos para os criadores. Nosso projeto é uma solução inovadora que monitora o rebanho em tempo real, alertando o criador sobre fugas e monitorando o bem-estar dos animais. Isso reduz perdas financeiras, melhora a eficiência operacional e traz mais segurança ao manejo. Em um mercado em expansão, nosso aplicativo ajuda os produtores a se destacarem, garantindo competitividade e sustentabilidade no setor.</b></p>
+                </div>
+                <div class="imagem-problematica">
+                    <img src="imgs/mercado.jpg" width="300px" height="300px" alt="">
                 </div>
             </div>
         </section>
 
-        <section id="mercado" class="mercado-bubatag">
-            <section class="bubalinos-brasil">
-                <h1 style="color: #2F3E46; font-size: 50px; margin-top: 100px; font-family: Fonarto;">Bubalinos do Brasil</h1>
-                <p><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore impedit officia delectus cum omnis, perferendis animi inventore facere maiores. Harum earum odio quasi magnam ab eos vero corrupti consequuntur veritatis maiores consequatur, voluptates cum praesentium expedita accusantium, illo ut modi, ipsam doloribus? Harum molestiae minima tempore quam, sapiente assumenda suscipit qui dicta id! Accusantium maiores nihil laborum alias voluptate fugit excepturi quae nisi, odio itaque non veritatis quis similique distinctio commodi omnis provident ad numquam velit sunt sapiente libero quidem vero dignissimos. Minima, facere! Cumque id saepe ullam quisquam voluptate dolor? Cupiditate, repellat! Nam autem similique perspiciatis doloribus labore sit?</b></p>
-            </section>
-
-        <section class="rebanho-2018">
-            <div class="text-rebanho">
-                <h1 style="color: #2F3E46; font-size: 50px; margin-top: 100px; font-family: Fonarto;">Rebanho de bubalinos no Brasil em 2018</h1>
-                <p><b>De acordo com Marques (1998, p. 22): no Brasil, os búfalos são criados principalmente para a produção de carne, mas já começam a ser aproveitados, e com grande sucesso, também na produção de leite.</b></p>
-            </div>
-                <div class="imagem-rebanho">
-                    <img src="imgs/rebanho.png" alt="">
-                </div>
-            </section>
-
-        <section class="leite-producao">
-            <h1 style="padding: 20px; margin-left: 30px; color: #90A955; font-size: 50px; font-family: Fonarto;">Bubalinos e a produção de Leite</h1>
-            <p style="margin-left: 50px; color: white; width: 850px; font-size: 16px;"><b>O leite é um alimento essencial para a dieta humana, composto por gordura, proteína, açúcares, minerais e vitaminas. O leite de búfala, em particular, é destacado por seu alto valor nutritivo e maior rendimento industrial em comparação com o leite de vaca. A gordura do leite, que tem grande valor econômico, é fundamental na produção de derivados. O leite de búfala tem ganhado destaque no mercado, com a expansão das vendas de produtos como muçarela, requeijão, iogurte, ricota, cotage e queijo frescal, refletindo investimentos em produtos mais atraentes para os consumidores.</b></p>
-        </section>
-
-        <section class="leite-qualidade">
-            <div class="text-qualidade">
-                <h1 style="color: #2F3E46; font-size: 50px; font-family: Fonarto;">Qualidade do leite de Búfala e benefícios a Saúde</h1>
-                <p style="font-size: 16px; color: white"><b>O leite de búfala tem características únicas que o diferenciam, por exemplo, do leite de vaca. Segundo Valente (2019), ele é do tipo A2, por isso é: mais rico em vitaminas e proteínas do que o leite de vaca A beta-caseína representa cerca de 25 a 30% do total de proteína do leite. O leite de búfala contém apenas a beta-caseína A2, que é uma composição que faz com que seja mais digerível, se comparado ao convencional leite vaca, uma vez que possui tanto a beta-caseína A2 quanto a beta-caseína A1 (VALENTE, 2019). Na figura 6, a diferença entre o leite de vaca e o leite de búfala.</b></p>
-            </div>
-            <div class="imagem-qualidade-leite">
-                <img src="imgs/qualidade-leite.png" alt="">
-            </div>
-        </section>
-    </section>
 
         <footer class="footer-bubatag">
             <div class="position-logo-krono-footer">
-                <img src="imgs/logo-krono.png" alt="">
+                <a href="index.html"><img src="imgs/logo-krono.png" alt=""></a>
             </div>
             <div class="text-footer-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p> Endereço: <br>
+                    Av. Clara Gionotti de Souza 257
+                    Registro-SP</p>
             </div>
             <div class="text-footer-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p>Nossas redes sociais <br>
+                    @Krono <br>
+                    Para todas as redes</p>
             </div>
             <div class="text-footer-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p>Número para contato: <br>
+                    (55) +13 98195-2523</p>
             </div>
             <p class="direitos">© 2024 Krono - Todos os direitos reservados.</p>
         </footer>
