--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
         <div class="primary-imagem">
-            <img src="imgs/templo2.png" alt="" width="100%" height="700px">
+            <img src="imgs/background-image-introducao.jpg" alt="" width="100%" height="700px">
             <h1 class="texto-centralizado">Nós somos a Krono!</h1>
         </div>
 
@@ -39,7 +39,7 @@
             <div class="position-sobre"> <!-- Posiciona o bloco de sobre primeiro -->
                 <div class="sobre-texto"> <!-- Posiciona o texto de primeiro sobre -->
                     <h1 style="font-size: 45px; color: #E0830F; font-family: Audiowide;">Quem somos nós?</h1>
-                    <p style="color: black; font-size: 20px;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</b></p>
+                    <p style="color: black; font-size: 24px;"><b>Olá, Somos um grupo de estudantes da Faculdade de Tecnologia de Registro (Fatec Registro), com formação e especialização na área de desenvolvimento de sistemas. Atualmente, estamos trabalhando em um projeto inovador voltado ao mercado de bubalinos, com o objetivo de contribuir para o aprimoramento da gestão e desenvolvimento dessa atividade no Brasil.</b></p>
                 </div>
                 <div class="imagem-sobre1"> <!-- Posiciona a imagem de primeiro sobre -->
                     <img src="imgs/logo-krono-maior.png" alt="">
@@ -91,22 +91,27 @@
 
             <div class="position-text-project" id="projeto">
                 <p style="font-family: Audiowide; font-size: 45px; color: #E0830F; margin-left: 15px;">Projeto</p>
-                <p style="font-size: 20px; font-weight: 300;"><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus incidunt neque ratione ipsa consectetur temporibus nihil eveniet ullam laboriosam, a unde inventore sint porro, amet modi officia assumenda saepe sequi sapiente. Quae non explicabo sed facilis quia fuga, atque, quaerat culpa sequi, dicta ipsum modi sint? Debitis exercitationem cum deserunt!</b></p>
-                <br><a href="bubatag.html"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 15%; border-style: none; width: 125px;">Ver Mais</button></a> 
+                <p style="font-size: 20px; font-weight: 300;"><b>Nosso projeto visa aplicar soluções tecnológicas que possam otimizar a criação e manejo de búfalos, trazendo benefícios para produtores rurais, empresários do setor agropecuário e a comunidade como um todo. Através de ferramentas e sistemas inovadores, buscamos oferecer novas perspectivas para a gestão de dados, rastreamento de rebanhos e processos logísticos no setor de bubalinos.</b></p>
+                <br><a href="bubatag.html"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 10%; border-style: none; width: 125px; cursor: pointer;">Ver Mais</button></a> 
             </div>
         </section>
         <footer class="footer">
             <div class="position-logo-krono-footer">
-                <img src="imgs/logo-krono.png" alt="">
+                <a href="index.html"><img src="imgs/logo-krono.png" alt=""></a>
             </div>
             <div class="text-footer-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p> Endereço: <br>
+                    Av. Clara Gionotti de Souza 257
+                    Registro-SP</p>
             </div>
             <div class="text-footer-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p>Nossas redes sociais <br>
+                    @Krono <br>
+                    Para todas as redes</p>
             </div>
             <div class="text-footer-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+                <p>Número para contato: <br>
+                    (55) +13 98195-2523</p>
             </div>
             <p class="direitos">© 2024 Krono - Todos os direitos reservados.</p>
         </footer>
